devel:
* added an instance of "namedrop" to fix naming problem
* added tol.newmin to slice etc.
* added check for numeric return from profile within confint
* fixed bugs in profile plotting when profile is restricted
   to a subset of variables
* added tests for par() to reset to original on exit

0.8.7  12/05/2008
* version bump, moved to R-forge.
* reordered NEWS file (most recent first)
     
0.8.6.1 22/03/2008:
   tweaked stop-on-better-fit code
   fixed (?) qAIC(c) methods

   26/03/2008:
   tweak/fix to ICtab documentation (thanks to Tom Hobbs)

0.8.6 added qAIC(c) methods (not working yet!)

0.8.5.1 oops. Fixed infelicity (bug?) in new 
  environment manipulation

0.8.5 tweaked environment/data assignment to preserve
    original minuslogl environment better

0.8.4 changed  plot.profile.mle2 options (added onepage etc.,
   made plot.confstr=TRUE by default)

0.8.3 added warning about too-short lower/upper 
      added documentation

0.8.2 fixed bug in AICctab
      cosmetic change to printing -- save call.orig
      moved ChangeLog to NEWS

0.8.1 fixed (?) environment bug
      tried to use built-in relist, but failed: renamed relist
	  to "relist2" (try again later)
      documented get.mnames (auxiliary function for ICtabs)
      started to add gr (gradient) capability -- NOT TESTED

0.8  changed ICtab to allow either ICtab(x,y,z) or ICtab(list(x,y,z))
	  (L <- list(...); if is.list(L[[1]]) && length(L)==1)

0.7.7 fix bug in profiling: all optim() methods EXCEPT L-BFGS-B
     return the value of the objective function if given a function
     with no arguments/zero-length starting parameter vector
     (this is the situation with "profiling" a 1-D function).
     L-BFGS-B gives funky answers.  added a check for this case.
     (may need to check behavior for alternate optimizers (nlm etc))
    [this behavior triggered a "found better fit" error when profiling
     1D functions with L-BFGS-B]

     changed behavior when finding better fit during profiling