@@ -1,10 +1,11 @@
 BUGS/ISSUES:
  
-  use numDeriv library hessian() function instead of nlme?
+  use numDeriv library hessian() function instead of nlme::fdHess?
+(use nlme::fdHess to avoid loading whole package?)
 
   should print warning immediately if convergence fails
 
-  order of parameters matters for L-BFGS-B
+BUG:   order of parameters matters for L-BFGS-B
 
   adjusting parameter vectors for lower, upper, parscale, ...
     when some params are fixed ...
