@@ -5,6 +5,9 @@ devel:
 * fixed bugs in profile plotting when profile is restricted
    to a subset of variables
 * added tests for par() to reset to original on exit
+* improved profile documentation
+* replicate std.err if specified in profile
+* add as.data.frame example
 
 0.8.7  12/05/2008
 * version bump, moved to R-forge.
